fixe Dockerfile and Jenkinsfile

--- a/Jenkinsfile.sample
+++ b/Jenkinsfile.sample
@@ -2,7 +2,7 @@
 pipeline {
 
     agent { 
-        label 'ubuntu' 
+        label 'centos7' 
     }
 
     triggers {
@@ -11,7 +11,8 @@ pipeline {
     stages {
         stage('checkout code') {
             steps {
-                    checkout scmGit(branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[credentialsId: 'zvi-github', url: 'git@github.com:zvimosh/hello-world-war.git']])            }
+                checkout([$class: 'GitSCM', branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[credentialsId: 'github-ssh', url: 'git@github.com:lidorg-dev/hello-world-war.git']]])
+            }
         }
         stage('Build') {
             steps {
